[gd_scene load_steps=15 format=3 uid="uid://b4m8ivv2vgopo"]

[ext_resource type="Script" path="res://Levels/LevelOne/level_one.gd" id="1_ltd7c"]
[ext_resource type="PackedScene" uid="uid://ba0h0qb7udjxi" path="res://Entities/Pig/pig.tscn" id="1_t7twn"]
[ext_resource type="PackedScene" uid="uid://c02q0r52pahfq" path="res://Entities/Player/player.tscn" id="2_kyfpv"]
[ext_resource type="PackedScene" uid="uid://h3gbtoma0dws" path="res://Entities/Truffle/truffle.tscn" id="3_ryv3c"]
[ext_resource type="Script" path="res://Levels/LevelOne/UI/GameTimer.gd" id="6_sd3kn"]
[ext_resource type="Script" path="res://Levels/LevelOne/UI/FlagLabel.gd" id="7_sf2xr"]
[ext_resource type="Texture2D" uid="uid://mrbq08qw5gml" path="res://Levels/LevelOne/pen.png" id="8_n6omw"]
[ext_resource type="Script" path="res://Levels/LevelOne/UI/PigLabel.gd" id="8_oxpq5"]
[ext_resource type="Script" path="res://Levels/LevelOne/UI/ScoreCalcLabel.gd" id="9_4hemv"]
[ext_resource type="Script" path="res://Levels/LevelOne/UI/GameEndScreen.gd" id="9_cicgp"]
[ext_resource type="AudioStream" uid="uid://cljmn2dcixnk3" path="res://Levels/LevelOne/rooster.ogg" id="11_fd24f"]
[ext_resource type="AudioStream" uid="uid://bne74rvw1rb2r" path="res://Levels/LevelOne/music.wav" id="11_pkklq"]
[ext_resource type="AudioStream" uid="uid://ck7j0ldhmud47" path="res://Levels/LevelOne/pigsty.wav" id="12_arx0l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uefrt"]
size = Vector2(1024, 512)

[node name="LevelOne" type="Node2D"]
script = ExtResource("1_ltd7c")
pigScene = ExtResource("1_t7twn")
truffleScene = ExtResource("3_ryv3c")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("8_n6omw")

[node name="FlagLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 960.0
offset_top = 8.0
offset_right = 1136.0
offset_bottom = 32.0
bbcode_enabled = true
script = ExtResource("7_sf2xr")

[node name="PigLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 960.0
offset_top = 32.0
offset_right = 1136.0
offset_bottom = 56.0
bbcode_enabled = true
script = ExtResource("8_oxpq5")

[node name="GameEndScreen" type="ColorRect" parent="Control"]
process_mode = 3
visible = false
z_index = 100
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.152941, 0.152941, 0.152941, 0.901961)
script = ExtResource("9_cicgp")

[node name="RichTextLabel" type="RichTextLabel" parent="Control/GameEndScreen"]
layout_mode = 0
offset_left = 256.0
offset_top = 128.0
offset_right = 896.0
offset_bottom = 200.0
theme_override_colors/default_color = Color(0.784314, 0.67451, 0.145098, 1)
bbcode_enabled = true
text = "[center][b][wave amp=50.0 freq=5.0 connected=1][font_size=50]It's the end of the day![/font_size][/wave][/b][/center]"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/GameEndScreen"]
layout_mode = 0
offset_left = 256.0
offset_top = 208.0
offset_right = 896.0
offset_bottom = 264.0
bbcode_enabled = true
text = "[center][font_size=20]How many truffles were you able to collect? 
How many pigs do we have left in the pen?[/font_size][/center]"
scroll_active = false

[node name="ScoreCalcLabel" type="RichTextLabel" parent="Control/GameEndScreen"]
layout_mode = 0
offset_left = 256.0
offset_top = 288.0
offset_right = 896.0
offset_bottom = 488.0
bbcode_enabled = true
scroll_active = false
script = ExtResource("9_4hemv")

[node name="Button" type="Button" parent="Control/GameEndScreen"]
layout_mode = 0
offset_left = 451.0
offset_top = 520.0
offset_right = 707.0
offset_bottom = 552.0
text = "I can do better!"

[node name="Player" parent="." instance=ExtResource("2_kyfpv")]
position = Vector2(501, 148)

[node name="Pen" type="Area2D" parent="."]
position = Vector2(576, 320)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pen"]
shape = SubResource("RectangleShape2D_uefrt")
metadata/_edit_lock_ = true

[node name="PigSpawn" type="Marker2D" parent="Pen"]
position = Vector2(-448, -192)

[node name="PigPool" type="Node" parent="."]

[node name="Truffles" type="Node" parent="."]

[node name="TruffleTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true
script = ExtResource("6_sd3kn")

[node name="RichTextLabel" type="RichTextLabel" parent="GameTimer"]
offset_left = 64.0
offset_top = 8.0
offset_right = 256.0
offset_bottom = 56.0
bbcode_enabled = true
text = "[b]Time Left[/b]:"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_pkklq")
autoplay = true

[node name="RoosterPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_fd24f")
autoplay = true

[node name="NoisePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_arx0l")
autoplay = true

[connection signal="pressed" from="Control/GameEndScreen/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="TruffleTimer" to="." method="_on_truffle_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="Control/GameEndScreen" method="_on_game_timer_timeout"]
